--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,12 @@
 server:
     error:
-        include-stacktrace: on-param
+        include-stacktrace: ON_PARAM
 
 spring:
     datasource:
         url: jdbc:mysql://31.170.160.154:3306/u752060425_publisocial?useSSL=false&createDataBaseIfNotExist=true&allowPublicKeyRetrieval=true
         username: u752060425_publiuser
-        password: Projeto22
+        password: Projeto13
     jpa:
         hibernate:
             ddl-auto: update
